--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,11 +1,19 @@
 .bg-color-home-0 {
   background: var(--corp-color-one);
-  background: linear-gradient(180deg, rgba(109, 48, 243, 1) 0%, rgba(0, 0, 0, 0) 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(109, 48, 243, 1) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
 }
 
 .bg-color-home-inverted {
   background: var(--corp-color-one);
-  background: linear-gradient(0deg, rgba(109, 48, 243, 1) 0%, rgba(0, 0, 0, 0) 100%);
+  background: linear-gradient(
+    0deg,
+    rgba(109, 48, 243, 1) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
 }
 
 .fullscreen-section {
@@ -28,7 +36,7 @@
   top: 75% !important;
 }
 
-.home-hero{
+.home-hero {
   width: 500px;
   transition: 0.7s;
 }
@@ -40,7 +48,8 @@
   transition: 0.7s;
 }
 
-.home-hero-card:hover, .home-hero:hover {
+.home-hero-card:hover,
+.home-hero:hover {
   transform: scale(1.1);
   transition: 0.7s;
 }
@@ -51,8 +60,12 @@
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background: rgb(134,79,255);
-  background: linear-gradient(90deg, rgba(134,79,255,1) 0%, rgba(80,0,255,1) 100%);
+  background: rgb(134, 79, 255);
+  background: linear-gradient(
+    90deg,
+    rgba(134, 79, 255, 1) 0%,
+    rgba(80, 0, 255, 1) 100%
+  );
   background-clip: border-box;
   border-radius: 0.25rem;
 }
@@ -63,8 +76,12 @@
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background: rgb(134,79,255);
-  background: linear-gradient(90deg, rgba(80,0,255,1) 0%, rgba(134,79,255,1) 100%);
+  background: rgb(134, 79, 255);
+  background: linear-gradient(
+    90deg,
+    rgba(80, 0, 255, 1) 0%,
+    rgba(134, 79, 255, 1) 100%
+  );
   background-clip: border-box;
   border-radius: 0.25rem;
 }
@@ -101,7 +118,8 @@
   position: relative;
 }
 
-#under-landing, #under-cards {
+#under-landing,
+#under-cards {
   margin-top: 16rem;
 }
 
@@ -117,112 +135,294 @@
 }
 
 .card-home-corp {
-	line-height: 1.4;
-	font-weight: 400;
-	padding: 2.5rem;
-	border-radius: 0.75rem;
-	background-color: var(--corp-color-one);
-	display: flex;
-	flex-direction: column;
-}¡
-
+  line-height: 1.4;
+  font-weight: 400;
+  padding: 2.5rem;
+  border-radius: 0.75rem;
+  background-color: var(--corp-color-one);
+  display: flex;
+  flex-direction: column;
+}
 .navbar-home {
   z-index: 1;
 }
 
 .card-home-corp h3 {
-	font-size: 1.875rem;
-	line-height: 2.25rem;
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .card-home-corp svg {
-	margin-top: -2%;
-	margin-left: -0.5%;
-	width: 2em;
-	height: 2em;
+  margin-top: -2%;
+  margin-left: -0.5%;
+  width: 2em;
+  height: 2em;
 }
 
 .card-home-corp h3 {
-	margin-top: 0.875em;
+  margin-top: 0.875em;
 }
 
 .card-home-corp h4 {
-	margin-top: 0.750em;
+  margin-top: 0.75em;
 }
 
 .card-home-corp p {
-	margin-top: 0.875em;
-	--tw-text-opacity: 1;
-	color: rgba(174, 175, 176, var(--tw-text-opacity));
-	font-size: 1.25rem;
-	line-height: 1.75rem;
+  margin-top: 0.875em;
+  --tw-text-opacity: 1;
+  color: rgba(174, 175, 176, var(--tw-text-opacity));
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
-@media (min-width: 640px) {
-	.card-home-corp svg,
-	.card-home-corp h3 {
-		font-size: 1.5rem;
-		line-height: 2rem;
+.rectangle-1 {
+  width: 2000px;
+  height: 400px;
+  background: #8e2de2;
+  background: -webkit-linear-gradient(to right, #4a00e0, #8e2de2);
+  background: linear-gradient(to right, #4a00e0, #8e2de2);
+  transform-origin: 50% 150% 0;
+  position: absolute;
+  left: 0;
+  z-index: 0;
+  transform: scale(1) rotate(-10deg);
+}
+
+.rectangle-2 {
+  width: 2000px;
+  height: 400px;
+  background: #8e2de2;
+  background: -webkit-linear-gradient(to right, #4a00e0, #8e2de2);
+  background: linear-gradient(to right, #4a00e0, #8e2de2);
+  transform-origin: 65% 100% 0;
+  position: absolute;
+  right: 0;
+  z-index: 0;
+  transform: scale(1) rotate(50deg);
+}
+
+.rectangle-1 {
+  opacity: 0;
+  animation: grow1 ease 1s forwards;
+  box-shadow: 0px 20px 30px 0px rgba(9, 21, 54, 0.25) !important;
+}
+
+.rectangle-2 {
+  opacity: 0;
+  animation: grow2 ease 1s forwards;
+  box-shadow: 0px 20px 30px 0px rgba(9, 21, 54, 0.25) !important;
+}
+
+.rectangle-transparent-1 {
+  width: 500px;
+  height: 500px;
+  border: 15px solid rgba(255, 255, 255, 0.08);
+  position: absolute;
+  left: -5%;
+  bottom: -10%;
+  display: block;
+  animation: floating-slow ease-in-out 12s infinite;
+}
+
+.rectangle-transparent-2 {
+  width: 600px;
+  height: 600px;
+  border: 15px solid rgba(255, 255, 255, 0.08);
+  position: absolute;
+  right: -10%;
+  top: 5%;
+  display: block;
+  animation: floating-slow ease-in-out 12s infinite;
+}
+
+.circle-1 {
+  width: 50px;
+  height: 50px;
+  border: 2px solid #fff;
+  position: absolute;
+  display: block;
+  border-radius: 50%;
+  transform-origin: 50% 50%;
+  left: 5%;
+  top: 50%;
+  animation: fadeInFromTop 0.5s linear forwards, floating ease 4s infinite;
+}
+
+.circle-2 {
+  width: 70px;
+  height: 70px;
+  top: 20%;
+  left: 83%;
+  border: 2px solid #fff;
+  position: absolute;
+  display: block;
+  border-radius: 50%;
+  transform-origin: 50% 50%;
+  animation: fadeInFromTop 0.5s linear forwards,
+    floating ease-in-out 4s infinite;
+}
+
+.circle-3 {
+  top: 80%;
+  right: 25%;
+  width: 40px;
+  height: 40px;
+  border: 2px solid #fff;
+  position: absolute;
+  display: block;
+  border-radius: 50%;
+  animation: fadeInFromTop 0.5s linear forwards,
+    floating ease-in-out 4s infinite;
+}
+
+.triangle {
+  position: absolute;
+}
+
+.triangle-1 {
+  right: 0;
+  animation: fadeInFromTop 0.5s linear forwards,
+    floating ease-in-out 6s infinite;
+}
+.triangle-1 img {
+  height: 50px;
+  width: 50px;
+  transform: rotate(30deg);
+}
+
+.triangle-2 {
+  top: 30%;
+  left: 20%;
+  animation: fadeInFromTop 0.5s linear forwards,
+    floating ease-in-out 8s infinite;
+}
+.triangle-2 img {
+  width: 75px;
+  height: 75px;
+  transform: rotate(15deg);
+}
+
+.triangle-3 {
+  top: 80%;
+  left: 15%;
+  animation: fadeInFromTop 0.5s linear forwards,
+    floating ease-in-out 10s infinite;
+}
+.triangle-3 img {
+  width: 45px;
+  height: 45px;
+  transform: rotate(40deg);
+}
+
+.triangle-4 {
+  top: 60%;
+  right: 15%;
+  animation: fadeInFromTop 0.5s linear forwards,
+    floating ease-in-out 5s infinite;
+}
+.triangle-4 img {
+  width: 45px;
+  height: 45px;
+  transform: rotate(-40deg);
+}
+
+.jumbotron {
+  color: #fff;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+  position: relative;
+  border-radius: 0;
+  margin-bottom: 0;
+  overflow: hidden;
+  min-height: 100vh;
+}
+
+@keyframes floating {
+	0% {
+	  transform: translate(0%, 0%) rotate(25deg);
 	}
+	25% {
+	  transform: translate(5%, 15%) rotate(25deg);
+	}
+	50% {
+	  transform: translate(10%, 5%) rotate(25deg);
+	}
+	75% {
+	  transform: translate(0%, 15%) rotate(25deg);
+	}
+	100% {
+	  transform: translate(0%, 0%) rotate(25deg);
+	}
+  }
+
+@media (min-width: 640px) {
+  .card-home-corp svg,
+  .card-home-corp h3 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
 }
 
 @media (min-width: 1024px) {
-	.card-home-corp svg,
-	.card-home-corp h3 {
-		font-size: 1.875rem;
-		line-height: 2.25rem;
-	}
+  .card-home-corp svg,
+  .card-home-corp h3 {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
 }
 
 @media (min-width: 1280px) {
-	.card-home-corp svg,
-	.card-home-corp h3 {
-		font-size: 2.25rem;
-		line-height: 2.5rem;
-	}
+  .card-home-corp svg,
+  .card-home-corp h3 {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
 }
 
 @media (min-width: 640px) {
-	.card-home-corp svg,
-	.card-home-corp h3 {
-		font-size: 1.5rem;
-		line-height: 2rem;
-	}
+  .card-home-corp svg,
+  .card-home-corp h3 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
 }
 
 @media (min-width: 1024px) {
-	.card-home-corp svg,
-	.card-home-corp h3 {
-		font-size: 1.875rem;
-		line-height: 2.25rem;
-	}
+  .card-home-corp svg,
+  .card-home-corp h3 {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
 }
 
 @media (min-width: 1280px) {
-	.card-home-corp svg,
-	.card-home-corp h3 {
-		font-size: 2.25rem;
-		line-height: 2.5rem;
-	}
+  .card-home-corp svg,
+  .card-home-corp h3 {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
 }
 
 @media (min-width: 640px) {
-	.card-home-corp p {
-		font-size: 1.125rem;
-		line-height: 1.75rem;
-	}
+  .card-home-corp p {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 1024px) {
-	.card-home-corp p {
-		font-size: 1.25rem;
-		line-height: 1.75rem;
-	}
+  .card-home-corp p {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 1280px) {
-	.card-home-corp p {
-		font-size: 1.5rem;
-		line-height: 2rem;
-	}
+  .card-home-corp p {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
 }
