--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,16 +4,16 @@
   class="navbar navbar-expand bg-blur position-fixed w-100 top-0 navbar-home"
 >
   <div class="container-fluid">
-    <a class="navbar-brand text-color" routerLink="/home">Insinia</a>
+    <a class="navbar-brand text-light" routerLink="/home">Insinia</a>
     <div class="d-flex justify-content-center">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link text-color active" routerLink="/home">
+          <a class="nav-link text-light active" routerLink="/home">
             <i class="bi bi-house-door-fill"></i>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-color" routerLink="/login">
+          <a class="nav-link text-light" routerLink="/login">
             <i class="bi bi-person-circle"></i>
           </a>
         </li>
@@ -32,38 +32,62 @@
     <div class="d-flex justify-content-center">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <button class="nav-link btn active" routerLink="/home">
+          <a class="nav-link text-light active" routerLink="/home">
             <i class="bi bi-house-door-fill"></i>
-          </button>
+          </a>
         </li>
         <li class="nav-item">
-          <button class="nav-link btn" routerLink="/login">
+          <a class="nav-link text-color" routerLink="/login">
             <i class="bi bi-person-circle"></i>
-          </button>
+          </a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 
-<div
-  class="position-relative mt-5 px-5 overflow-hidden text-color p-md-5 text-center"
->
-  <h1 class="lead mb-4">Bienvenido a Insinia</h1>
-  <div class="product-device svg-container d-none d-md-block">
-    <img class="img-fluid home-hero" src="../../assets/svg/working.svg" />
+<div class="jumbotron bg-color d-flex align-items-center">
+  <div class="container text-center">
+    <h1 class="lead mb-4">Insinia</h1>
+    <div class="svg-container d-none d-md-block">
+      <img class="img-fluid home-hero" src="../../assets/svg/working.svg" />
+    </div>
+    <div class="col-md-7 p-lg-5 mx-auto mt-2">
+      <p class="lead fw-normal">
+        Herramienta definitiva para creación, edición y manejo de Rankings
+      </p>
+      <a
+        class="btn btn-light text-color mt-2"
+        routerLink="/login"
+        >¡Comenzamos!</a
+      >
+    </div>
   </div>
-  <div class="col-md-7 p-lg-5 mx-auto mt-2">
-    <p class="lead fw-normal">
-      Herramienta definitiva para creación, edición y manejo de Rankings
-    </p>
-    <a class="btn btn-color text-light fw-500 me-sm-3 mt-2 mb-sm-0" routerLink="/login">¡Comenzamos!</a>
+  <div class="rectangle-1"></div>
+  <div class="rectangle-2"></div>
+  <div class="rectangle-transparent-1"></div>
+  <div class="rectangle-transparent-2"></div>
+  <div class="circle-1"></div>
+  <div class="circle-2"></div>
+  <div class="circle-3"></div>
+  <div class="triangle triangle-1">
+    <img src="../../assets/icons/obj_triangle.png" alt="" />
+  </div>
+  <div class="triangle triangle-2">
+    <img src="../../assets/icons/obj_triangle.png" alt="" />
+  </div>
+  <div class="triangle triangle-3">
+    <img src="../../assets/icons/obj_triangle.png" alt="" />
+  </div>
+  <div class="triangle triangle-4">
+    <img src="../../assets/icons/obj_triangle.png" alt="" />
   </div>
 </div>
+<!-- Features Section-->
 
 <div class="container" id="under-landing">
   <div class="row">
-    <div class="col mb-3">
+    <div class="col">
       <section>
         <div class="text-center">
           <h2 class="text-color mb-4">¿Qué ofrecemos?</h2>
