--- a/src/app/loading/loading.component.html
+++ b/src/app/loading/loading.component.html
@@ -1,12 +1,7 @@
 <div class="fullscreen bg-color text-light position-fixed">
   <div class="h-100 d-flex justify-content-center align-items-center">
-      <div class="d-block">
-        <div class="loader"></div>
-      </div>
-  </div>
-  <div class="h-25 d-flex justify-content-center align-items-center">
     <div class="d-block">
-      <div class="loader"></div>
+      <logo [animated]="true"></logo>
     </div>
-    </div>
+  </div>
 </div>
