--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,8 @@
   class="navbar navbar-expand bg-blur position-fixed w-100 top-0 navbar-home"
 >
   <div class="container-fluid">
-    <a class="navbar-brand text-light" routerLink="/home"><logo [animated]="false"></logo>
+    <a class="navbar-brand text-light" routerLink="/home"
+      ><logo [animated]="false"></logo>
     </a>
     <div class="d-flex justify-content-center">
       <ul class="navbar-nav">
@@ -29,7 +30,9 @@
   class="navbar navbar-expand navbar-dark bg-color position-fixed w-100 top-0 navbar-home"
 >
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/home"><img src="../../assets/svg/Insinia.svg" style="width: 30px"/></a>
+    <a class="navbar-brand" routerLink="/home"
+      ><logo [animated]="false"></logo
+    ></a>
     <div class="d-flex justify-content-center">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -47,7 +50,7 @@
   </div>
 </nav>
 
-<div class="jumbotron bg-color d-flex align-items-center" id="welcome-image"> 
+<div class="jumbotron bg-color d-flex align-items-center" id="welcome-image">
   <div class="container text-center">
     <h1 class="mb-4">Insinia</h1>
     <div class="svg-container d-none d-md-block">
@@ -57,9 +60,7 @@
       <p class="lead fw-normal">
         Herramienta definitiva para creación, edición y manejo de Rankings
       </p>
-      <a
-        class="btn btn-light text-color mt-2"
-        routerLink="/login"
+      <a class="btn btn-light text-color mt-2" routerLink="/login"
         >¡Comenzamos!</a
       >
     </div>
@@ -84,7 +85,6 @@
     <img src="../../assets/icons/obj_triangle.png" alt="" />
   </div>
 </div>
-<!-- Features Section-->
 
 <div class="container" id="under-landing">
   <div class="row">
@@ -138,48 +138,66 @@
         <i class="bi bi-exclamation-circle-fill me-2"></i>Es importante utilizar
         las últimas versiones de estos navegadores
       </p>
-      <a href="https://brave.com/es/download/"
-        ><img
-          src="../../assets/brave.png"
-          class="mx-3 browser"
-          width="50"
-          alt="brave icon"
-      /></a>
-      <a href="https://www.opera.com/es/download"
-        ><img
-          src="../../assets/opera.png"
-          class="mx-3 browser"
-          width="50"
-          alt="opera icon"
-      /></a>
-      <a href="https://www.google.com/intl/es/chrome"
-        ><img
-          src="../../assets/chrome.png"
-          class="mx-3 browser"
-          width="50"
-          alt="chrome icon"
-      /></a>
-      <a href="https://www.mozilla.org/es-ES/firefox/new/"
-        ><img
-          src="../../assets/firefox.png"
-          class="mx-3 browser"
-          width="50"
-          alt="firefox icon"
-      /></a>
-      <a href="https://www.microsoft.com/es-es/edge"
-        ><img
-          src="../../assets/edge.png"
-          class="mx-3 browser"
-          width="50"
-          alt="edge icon"
-      /></a>
     </div>
   </div>
 </div>
 
+<div class="page-section client-section">
+  <div class="container-fluid">
+    <div
+      class="row row-cols-2 row-cols-md-3 row-cols-lg-5 justify-content-center"
+    >
+      <div class="text-center">
+        <img
+          src="../../assets/firefox.png"
+          class="mx-3 browser"
+          width="50"
+          alt="firefox icon"
+        />
+      </div>
+      <div class="text-center">
+        <img
+          src="../../assets/opera.png"
+          class="mx-3 browser"
+          width="50"
+          alt="opera icon"
+        />
+      </div>
+      <div class="text-center">
+        <img
+          src="../../assets/brave.png"
+          class="mx-3 browser"
+          width="50"
+          alt="brave icon"
+        />
+      </div>
+      <div class="text-center">
+        <img
+          src="../../assets/chrome.png"
+          class="mx-3 browser"
+          width="50"
+          alt="chrome icon"
+        />
+      </div>
+      <div class="text-center">
+        <img
+          src="../../assets/edge.png"
+          class="mx-3 browser"
+          width="50"
+          alt="edge icon"
+        />
+      </div>
+    </div>
+  </div>
+  <!-- .container-fluid -->
+</div>
+
 <div class="fixed-bottom pe-2 pb-2" *ngIf="goupStatus" @slideInOut>
   <div class="text-end">
-    <a routerLink="/home#welcome-image" class="btn btn-color text-light" id="go-up"
+    <a
+      routerLink="/home#welcome-image"
+      class="btn btn-color text-light"
+      id="go-up"
       ><i class="bi bi-arrow-up-circle-fill"></i
     ></a>
   </div>
