--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -90,8 +90,8 @@
   <div class="row">
     <div class="col">
       <section>
-        <div class="text-center">
-          <h1 class="text-color mb-4">¿Qué ofrecemos?</h1>
+        <div class="text-start">
+          <h1 class="text-color mb-1">¿Qué ofrecemos?</h1>
         </div>
         <div class="row">
           <div class="col-xl mb-3">
@@ -131,15 +131,15 @@
 </div>
 
 <div class="container" id="under-cards">
-  <div class="row">
+  <div class="row justify-content-center">
     <div class="col-auto g-0 text-start align-self-center pt-5">
       <h1 class="text-color mb-1">Disponible para los navegadores</h1>
     </div>
   </div>
 </div>
 
-<div class="page-section">
-  <div class="container client-section">
+<div class="page-section mb-4">
+  <div class="container mb-3 py-4">
     <div class="row justify-content-center">
       <div class="col-auto text-center">
         <img
