--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,12 +11,12 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link text-light active" routerLink="/home">
-            <i class="bi bi-house-door-fill"></i>
+            <i class="bi icon-lg bi-house-door-fill"></i>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-light" routerLink="/login">
-            <i class="bi bi-person-circle"></i>
+            <i class="bi icon-lg bi-person-circle"></i>
           </a>
         </li>
       </ul>
@@ -37,12 +37,12 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link text-light active" routerLink="/home">
-            <i class="bi bi-house-door-fill"></i>
+            <i class="bi icon-lg bi-house-door-fill"></i>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-light" routerLink="/login">
-            <i class="bi bi-person-circle"></i>
+            <i class="bi icon-lg bi-person-circle"></i>
           </a>
         </li>
       </ul>
@@ -51,10 +51,12 @@
 </nav>
 
 <div class="jumbotron bg-color d-flex align-items-center" id="welcome-image">
-  <div class="container text-center">
-    <h1 class="mb-4">Insinia</h1>
+  <div class="container text-center interactive">
     <div class="svg-container d-none d-md-block">
-      <img class="img-fluid home-hero" src="../../assets/svg/working.svg" />
+      <img
+        class="img-fluid home-hero move-two"
+        src="../../assets/svg/working-insinia.svg"
+      />
     </div>
     <div class="col-md-7 p-lg-5 mx-auto mt-2">
       <p class="lead fw-normal">
@@ -86,6 +88,51 @@
   </div>
 </div>
 
+<div class="container-fluid position-absolute overflow-hidden mb-3">
+  <div class="position-relative" style="width: 120%; left: -5%">
+    <div class="row my-2 gap-2 move">
+      <div class="col bg-color p-2 rounded shadow-sm"></div>
+      <div class="col bg-color p-2 rounded shadow-sm"></div>
+      <div class="col bg-color p-2 rounded shadow-sm"></div>
+      <div class="col bg-color p-2 rounded shadow-sm"></div>
+      <div class="col bg-color p-2 rounded shadow-sm"></div>
+    </div>
+    <div class="row my-2 gap-2">
+      <div class="col bg-color opacity-75 p-2 shadow-sm"></div>
+      <div class="col bg-color opacity-75 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-75 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-75 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-75 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-75 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-75 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-75 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-75 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-75 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-75 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-75 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-75 p-2 shadow-sm"></div>
+    </div>
+    <div class="row my-2 gap-2 move-inverted">
+      <div class="col bg-color opacity-50 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-50 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-50 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-50 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-50 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-50 p-2 rounded shadow-sm"></div>
+    </div>
+    <div class="row my-2 gap-2 move-inverted">
+      <div class="col bg-color opacity-25 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-25 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-25 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-25 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-25 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-25 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-25 p-2 rounded shadow-sm"></div>
+      <div class="col bg-color opacity-25 p-2 rounded shadow-sm"></div>
+    </div>
+  </div>
+</div>
+
 <div class="container" id="under-landing">
   <div class="row">
     <div class="col">
@@ -97,18 +144,21 @@
           <div class="col-xl mb-3">
             <section class="card-home-corp">
               <h2 class="text-light">
-                <i class="bi bi-building me-2"></i>Organización
+                <i class="bi icon-lg bi-building me-2"></i>Organización
               </h2>
-              <p>Una genial manera de manejar organizar, cambiar y editar.</p>
+              <p class="text-light">
+                Una genial manera de manejar organizar, cambiar y editar.
+              </p>
             </section>
           </div>
           <div class="col-xl mb-3">
             <section class="card-home-corp">
               <h2 class="text-light">
-                <i class="bi bi-people-fill me-2"></i>Colaboración
+                <i class="bi icon-lg bi-people-fill me-2"></i>Colaboración
               </h2>
-              <p>
-                La colaboración parte de nosotros y asi lo hemos implementado.
+              <p class="text-light">
+                La colaboración es parte de nosotros y asi lo hemos
+                implementado.
               </p>
             </section>
           </div>
@@ -117,9 +167,10 @@
           <div class="col">
             <section class="card-home-corp">
               <h2 class="text-light">
-                <i class="bi bi-hand-thumbs-up-fill me-2"></i>Facilidad de uso
+                <i class="bi icon-lg bi-hand-thumbs-up-fill me-2"></i>Facilidad
+                de uso
               </h2>
-              <p>
+              <p class="text-light">
                 Desarrollado en mente para un uso escolar, casual y profesional.
               </p>
             </section>
@@ -130,57 +181,47 @@
   </div>
 </div>
 
-<div class="container" id="under-cards">
-  <div class="row justify-content-center">
-    <div class="col-auto g-0 text-start align-self-center pt-5">
-      <h1 class="text-color mb-1">Disponible para los navegadores</h1>
+<div class="container half shadow-sm">
+  <div class="h-100 d-flex justify-content-center align-items-center">
+    <div class="col-auto text-center">
+      <img
+        src="../../assets/firefox.png"
+        class="mx-3 browser"
+        width="25"
+        alt="firefox icon"
+      />
     </div>
-  </div>
-</div>
-
-<div class="page-section mb-4">
-  <div class="container mb-3 py-4">
-    <div class="row justify-content-center">
-      <div class="col-auto text-center">
-        <img
-          src="../../assets/firefox.png"
-          class="mx-3 browser"
-          width="50"
-          alt="firefox icon"
-        />
-      </div>
-      <div class="col-auto text-center">
-        <img
-          src="../../assets/opera.png"
-          class="mx-3 browser"
-          width="50"
-          alt="opera icon"
-        />
-      </div>
-      <div class="col-auto text-center">
-        <img
-          src="../../assets/brave.png"
-          class="mx-3 browser"
-          width="50"
-          alt="brave icon"
-        />
-      </div>
-      <div class="col-auto text-center">
-        <img
-          src="../../assets/chrome.png"
-          class="mx-3 browser"
-          width="50"
-          alt="chrome icon"
-        />
-      </div>
-      <div class="col-auto text-center">
-        <img
-          src="../../assets/edge.png"
-          class="mx-3 browser"
-          width="50"
-          alt="edge icon"
-        />
-      </div>
+    <div class="col-auto text-center">
+      <img
+        src="../../assets/opera.png"
+        class="mx-3 browser"
+        width="25"
+        alt="opera icon"
+      />
+    </div>
+    <div class="col-auto text-center">
+      <img
+        src="../../assets/brave.png"
+        class="mx-3 browser"
+        width="25"
+        alt="brave icon"
+      />
+    </div>
+    <div class="col-auto text-center">
+      <img
+        src="../../assets/chrome.png"
+        class="mx-3 browser"
+        width="25"
+        alt="chrome icon"
+      />
+    </div>
+    <div class="col-auto text-center">
+      <img
+        src="../../assets/edge.png"
+        class="mx-3 browser"
+        width="25"
+        alt="edge icon"
+      />
     </div>
   </div>
 </div>
@@ -198,7 +239,7 @@
       routerLink="/home#welcome-image"
       class="btn btn-color text-light"
       id="go-up"
-      ><i class="bi bi-arrow-up-circle-fill"></i
+      ><i class="bi icon-lg bi-arrow-up-circle-fill"></i
     ></a>
   </div>
 </div>
