--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid bg-color">
     <div class="row position-relative align-items-center vh-100">
         <div class="login-card-width mx-auto position-absolute top-40 start-50 translate-middle" [@fadeIn]>
-            <h3 class="text-light">Insinia | Login</h3>
+            <h3 class="text-light"> <logo [animated]="false" [width]="20"></logo> | Login</h3>
             <div class="card border-0 border-bottom border-5 border-color-hover login-card-height shadow border text-color">
                 <form class="card-body d-flex flex-column" [formGroup]="loginForm" (ngSubmit)="logIn()">
                     <label for="email">Email</label>
