Cambiando -- por - y aplicado prettier

--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,35 +1,39 @@
 <div [@fadeIn] class="container-fluid fullscreen bg-color">
-    <div class="ocean">
-        <div class="bubble bubble--1"></div>
-        <div class="bubble bubble--2"></div>
-        <div class="bubble bubble--3"></div>
-        <div class="bubble bubble--4"></div>
-        <div class="bubble bubble--5"></div>
-        <div class="bubble bubble--6"></div>
-        <div class="bubble bubble--7"></div>
-        <div class="bubble bubble--8"></div>
-        <div class="bubble bubble--9"></div>
-        <div class="bubble bubble--10"></div>
-        <div class="bubble bubble--11"></div>
-        <div class="bubble bubble--12"></div>
-        <div id="octocat"></div>
-      </div>
-    <div class="row h-75 align-items-center">
-        <div class="col text-light">
-            <div class="row justify-content-center text-center">
-                <div class="col title">
-                    <i class="bi bi-cloud-lightning-rain-fill float"></i>
-                    <div class="subtitle mt-5">ERROR 404</div>
-                </div>
-            </div>
-            <div class="row mt-5 text-center">
-                <h5>La página que intentas acceder no existe.</h5>
-            </div>
-            <div class="row text-center mt-3">
-                <div class="col">
-                    <button class="btn btn-outline-color-white rounded-pill" routerLink="/home">Volver<i class="bi bi-arrow-counterclockwise ms-2"></i></button>
-                </div>
-            </div>
+  <div class="ocean">
+    <div class="bubble bubble-1"></div>
+    <div class="bubble bubble-2"></div>
+    <div class="bubble bubble-3"></div>
+    <div class="bubble bubble-4"></div>
+    <div class="bubble bubble-5"></div>
+    <div class="bubble bubble-6"></div>
+    <div class="bubble bubble-7"></div>
+    <div class="bubble bubble-8"></div>
+    <div class="bubble bubble-9"></div>
+    <div class="bubble bubble-10"></div>
+    <div class="bubble bubble-11"></div>
+    <div class="bubble bubble-12"></div>
+  </div>
+  <div class="row h-75 align-items-center">
+    <div class="col text-light">
+      <div class="row justify-content-center text-center">
+        <div class="col title text-shadow">
+          <i class="bi bi-cloud-lightning-rain-fill"></i>
+          <div class="subtitle mt-5 ">ERROR 404</div>
         </div>
+      </div>
+      <div class="row mt-5 text-center text-shadow">
+        <h3>La página que intentas acceder no existe.</h3>
+      </div>
+      <div class="row text-center mt-3">
+        <div class="col">
+          <button
+            class="btn btn-outline-color-white shadow rounded-pill"
+            routerLink="/home"
+          >
+            Volver<i class="bi bi-arrow-counterclockwise ms-2"></i>
+          </button>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
