--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,42 +1,25 @@
-.bg-color-home-0 {
-  background: rgb(109, 48, 243);
-  background: linear-gradient(
-    180deg,
-    rgba(109, 48, 243, 1) 0%,
-    rgba(0, 0, 0, 0) 100%
-  );
-}
-
-.bg-color-home-inverted {
-  background: rgb(109, 48, 243);
-  background: linear-gradient(
-    0deg,
-    rgba(109, 48, 243, 1) 0%,
-    rgba(0, 0, 0, 0) 100%
-  );
-}
 .btn-color:hover {
-  background-color: rgb(81, 8, 238) !important;
-  color: white !important;
+	background-color: #5108ee!important;
+	color: #fff!important
 }
 
 .map {
-  height: 20vh;
-  width: 60vw;
+	height: 20vh;
+	width: 60vw
 }
 
 .body {
-  width: 100%;
-  height: 150vh;
-  background: linear-gradient(0deg, rgb(140, 87, 253) 0%, rgba(0, 0, 0, 0) 90%);
-  position: absolute;
+	width: 100%;
+	height: 150vh;
+	background: linear-gradient(0deg, #8c57fd 0, rgba(0, 0, 0, 0) 90%);
+	position: absolute
 }
 
 a {
-  color: rgb(109, 48, 243);
-  text-decoration: none;
+	color: #6d30f3;
+	text-decoration: none
 }
 
 .logo:hover {
-  cursor: pointer;
+	cursor: pointer
 }
