Cambiando rutas de ubicacion

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -182,7 +182,7 @@
   <div class="h-100 d-flex justify-content-center align-items-center">
     <div class="col-auto text-center">
       <img
-        src="../../assets/firefox.png"
+        src="../../assets/icons/firefox.png"
         class="mx-3 browser"
         width="25"
         alt="firefox icon"
@@ -190,7 +190,7 @@
     </div>
     <div class="col-auto text-center">
       <img
-        src="../../assets/opera.png"
+        src="../../assets/icons/opera.png"
         class="mx-3 browser"
         width="25"
         alt="opera icon"
@@ -198,7 +198,7 @@
     </div>
     <div class="col-auto text-center">
       <img
-        src="../../assets/brave.png"
+        src="../../assets/icons/brave.png"
         class="mx-3 browser"
         width="25"
         alt="brave icon"
@@ -206,7 +206,7 @@
     </div>
     <div class="col-auto text-center">
       <img
-        src="../../assets/chrome.png"
+        src="../../assets/icons/chrome.png"
         class="mx-3 browser"
         width="25"
         alt="chrome icon"
@@ -214,7 +214,7 @@
     </div>
     <div class="col-auto text-center">
       <img
-        src="../../assets/edge.png"
+        src="../../assets/icons/edge.png"
         class="mx-3 browser"
         width="25"
         alt="edge icon"
@@ -224,10 +224,10 @@
 </div>
 
 <div class="text-center bg-color text-light pt-2">
-  <p>Desarrollado por Insinia</p>
-  <p class="text-light mb-0 pb-2">
+  <p>Desarrollado por Insinia<logo class="ms-1" [width]="15"></logo></p>
+  <small class="text-light mb-0 p-0">
     2022 © Insinia. Todos los derechos reservados.
-  </p>
+  </small>
 </div>
 
 <div class="fixed-bottom me-2 mb-2" *ngIf="goupStatus" @slideInOut>
