--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,59 +1,9 @@
-<nav
-  *ngIf="!navbarStatus"
-  @slideDownHideUp
-  class="navbar navbar-expand bg-blur position-fixed w-100 top-0 navbar-home"
->
-  <div class="container-fluid">
-    <a class="navbar-brand text-light" routerLink="/home"
-      ><logo [animated]="false" [width]="20"></logo>
-    </a>
-    <div class="d-flex justify-content-center">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link text-light active" routerLink="/home">
-            <i class="bi icon-lg bi-house-door-fill"></i>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-light" routerLink="/login">
-            <i class="bi icon-lg bi-person-circle"></i>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<nav
-  *ngIf="navbarStatus"
-  @slideDownHideUp
-  class="navbar navbar-expand navbar-dark bg-color position-fixed w-100 top-0 navbar-home"
->
-  <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/home"
-      ><logo [animated]="false"></logo
-    ></a>
-    <div class="d-flex justify-content-center">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link text-light active" routerLink="/home">
-            <i class="bi icon-lg bi-house-door-fill"></i>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-light" routerLink="/login">
-            <i class="bi icon-lg bi-person-circle"></i>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+<topnav [toggleBlur]="topnavShow"></topnav>
 
 <div class="jumbotron bg-color d-flex align-items-center" id="welcome-image">
-  <div class="container text-center interactive">
+  <div [@fadeIn] class="container text-center interactive">
     <div class="svg-container d-none d-md-block">
-      <img
+      <img 
         class="img-fluid home-hero move-two"
         src="../../assets/svg/working-insinia.svg"
       />
@@ -67,23 +17,23 @@
       >
     </div>
   </div>
-  <div class="rectangle-1"></div>
-  <div class="rectangle-2"></div>
-  <div class="rectangle-transparent-1"></div>
-  <div class="rectangle-transparent-2"></div>
-  <div class="circle-1"></div>
-  <div class="circle-2"></div>
-  <div class="circle-3"></div>
-  <div class="triangle triangle-1">
+  <div [@fadeIn] class="rectangle-1"></div>
+  <div [@fadeIn] class="rectangle-2"></div>
+  <div [@fadeIn] class="rectangle-transparent-1"></div>
+  <div [@fadeIn] class="rectangle-transparent-2"></div>
+  <div [@fadeIn] class="circle-1"></div>
+  <div [@fadeIn] class="circle-2"></div>
+  <div [@fadeIn] class="circle-3"></div>
+  <div [@fadeIn] class="triangle triangle-1">
     <img src="../../assets/icons/obj_triangle.png" alt="" />
   </div>
-  <div class="triangle triangle-2">
+  <div [@fadeIn] class="triangle triangle-2">
     <img src="../../assets/icons/obj_triangle.png" alt="" />
   </div>
-  <div class="triangle triangle-3">
+  <div [@fadeIn] class="triangle triangle-3">
     <img src="../../assets/icons/obj_triangle.png" alt="" />
   </div>
-  <div class="triangle triangle-4">
+  <div [@fadeIn] class="triangle triangle-4">
     <img src="../../assets/icons/obj_triangle.png" alt="" />
   </div>
 </div>
@@ -230,7 +180,7 @@
   </small>
 </div>
 
-<div class="fixed-bottom me-2 mb-2" *ngIf="goupStatus" @slideInOut>
+<div class="fixed-bottom me-2 mb-2" *ngIf="goupShow" @slideInOut>
   <div class="text-end">
     <a
       routerLink="/home#welcome-image"
