--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -8,6 +8,11 @@
           style="cursor: pointer"
       /></a>
     </div>
+    <!-- 
+    <div class="col-4">
+      
+    </div> -->
+
     <!-- <div class="col-1"></div> -->
     <h1 class="titulo">REGISTRO</h1>
     <a [routerLink]="['/login']" class="loginLink">¿Ya tienes cuenta?</a>
