--- a/src/app/user-ranking/user-ranking.component.html
+++ b/src/app/user-ranking/user-ranking.component.html
@@ -76,6 +76,22 @@
     </div>
   </div>
 
+  <section>
+    <div #rankingCard [@fadeIn] *ngFor="let item of rankings">
+      <div class="card" style="width: 18rem">
+        <img class="card-img-top" src="" alt="Card image cap" />
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <div class="cards_landscape_wrap-2 mt-5">
     <div class="container">
       <div class="container no-rankings" *ngIf="nullRankings">
